--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: Daily Money Maker & Deploy
+Money Maker & Deploy
 
 on:
   schedule:
@@ -48,11 +48,4 @@ jobs:
 
       - name: Commit & Push (Save Data)
         run: |
-          git config --global user.name 'MoneyBot'
-          git config --global user.email 'bot@example.com'
-          git add content/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "New Article" && git push)
-
-      # ここでVercelへデプロイするための準備（publicフォルダをArtifactsにする）
-      # だが、一番簡単なのはVercel側からGitHubを見に行くことなので、
-      # ここでは「記事生成と保存」までを完璧に行う。
+          
