--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -49,6 +49,6 @@ jobs:
         run: |
           git config --global user.name 'MoneyBot'
           git config --global user.email 'bot@example.com'
-          git pull
-          git add content/
+          git pull origin main --rebase
+          git add .
           git diff --quiet && git diff --staged --quiet || (git commit -m "New Article" && git push)
