--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Build Site
         run: hugo --minify
 
+      # ▼▼▼ ここが重要！git pullが入った最強版 ▼▼▼
       - name: Commit & Push
         run: |
           git config --global user.name 'MoneyBot'
